Use template parameter correctly

--- a/azure-devops/run_build.yml
+++ b/azure-devops/run_build.yml
@@ -35,7 +35,7 @@ jobs:
       displayName: 'Run vcpkg'
       timeoutInMinutes: 10
       inputs:
-        vcpkgArguments: 'boost-math:${{ parameters/targetPlatform }}-windows'
+        vcpkgArguments: 'boost-math:${{ parameters.targetPlatform }}-windows'
         vcpkgDirectory: '$(vcpkgLocation)'
     - task: run-cmake@0
       displayName: 'Build Support Tools'
