use ADO expression not pwsh

--- a/azure-devops/run_build.yml
+++ b/azure-devops/run_build.yml
@@ -5,7 +5,7 @@ jobs:
 - job: ${{ parameters.targetPlatform }}
   pool:
     name: STL
-    demands: agent.osArchitecture -eq 'AMD64'
+    demands: eq(agent.osArchitecture, 'AMD64')
 
   variables:
     vcpkgLocation: '$(Build.SourcesDirectory)/vcpkg'
