Inconsistent syntax is bad and should feel bad

--- a/azure-devops/run_build.yml
+++ b/azure-devops/run_build.yml
@@ -5,8 +5,7 @@ jobs:
 - job: ${{ parameters.targetPlatform }}
   pool:
     name: STL
-    demands: eq(agent.osArchitecture, 'AMD64')
-
+    demands: agent.osArchitecture -equals 'AMD64'
   variables:
     vcpkgLocation: '$(Build.SourcesDirectory)/vcpkg'
   steps:
