test what having a dependent job looks like

--- a/azure-devops/run_build.yml
+++ b/azure-devops/run_build.yml
@@ -82,6 +82,7 @@ jobs:
   pool:
     name: STL
     #demands: Agent.OSArchitecture -equals ARM64
+  steps:
   - task: Bash@3
     inputs:
       script: echo "Hello"
