Get the test hello to run on ARM64 hosts

--- a/azure-devops/run_build.yml
+++ b/azure-devops/run_build.yml
@@ -81,7 +81,7 @@ jobs:
   condition: and(succeeded(), in('${{ parameters.targetPlatform }}', 'arm', 'arm64'))
   pool:
     name: STL
-    #demands: Agent.OSArchitecture -equals ARM64
+    demands: PROCESSOR_ARCHITEW6432 -equals ARM64
   steps:
   - task: Bash@3
     inputs:
