--- a/stl/CMakeLists.txt
+++ b/stl/CMakeLists.txt
@@ -405,75 +405,73 @@ include_directories(BEFORE
     "${TOOLSET_ROOT_DIR}/crt/src/vcruntime"
     )
 
-function(add_stl_dlls D_SUFFIX THIS_CONFIG_DEFINITIONS THIS_CONFIG_COMPILE_OPTIONS GL_FLAG THIS_CONFIG_LINK_OPTIONS)
-    # msvcp140.dll
-    add_library(msvcp${D_SUFFIX}_objects OBJECT ${DLL_SOURCES} ${SOURCES})
-    target_compile_definitions(msvcp${D_SUFFIX}_objects PRIVATE "CRTDLL2;_DLL;${THIS_CONFIG_DEFINITIONS}")
-    target_compile_options(msvcp${D_SUFFIX}_objects PRIVATE "${THIS_CONFIG_COMPILE_OPTIONS};${GL_FLAG};/EHsc")
+# msvcp140.dll
+add_library(msvcp_objects OBJECT ${DLL_SOURCES} ${SOURCES})
+target_compile_definitions(msvcp_objects PRIVATE "CRTDLL2;_DLL;$<$<CONFIG:Debug>:_DEBUG>.g")
+target_compile_options(msvcp_objects PRIVATE "${THIS_CONFIG_COMPILE_OPTIONS};$<$<CONFIG:Release>:/GL>;/EHsc")
 
-    add_library(msvcp${D_SUFFIX}_eha_objects OBJECT ${EHA_SOURCES})
-    target_compile_definitions(msvcp${D_SUFFIX}_eha_objects PRIVATE "CRTDLL2;_DLL;${THIS_CONFIG_DEFINITIONS}")
-    target_compile_options(msvcp${D_SUFFIX}_eha_objects PRIVATE "${THIS_CONFIG_COMPILE_OPTIONS};${GL_FLAG};/EHa")
+add_library(msvcp_eha_objects OBJECT ${EHA_SOURCES})
+target_compile_definitions(msvcp_eha_objects PRIVATE "CRTDLL2;_DLL;$<$<CONFIG:Debug>:_DEBUG>.g")
+target_compile_options(msvcp_eha_objects PRIVATE "${THIS_CONFIG_COMPILE_OPTIONS};$<$<CONFIG:Release>:/GL>;/EHa")
 
-    add_library(msvcp${D_SUFFIX} SHARED)
-    target_link_libraries(msvcp${D_SUFFIX} PRIVATE msvcp${D_SUFFIX}_eha_objects msvcp${D_SUFFIX}_objects "${TOOLSET_LIB}/vcruntime${D_SUFFIX}.lib" "${TOOLSET_LIB}/msvcrt${D_SUFFIX}.lib" "ucrt${D_SUFFIX}.lib" "${TOOLSET_LIB}/concrt${D_SUFFIX}.lib" "delayimp.lib")
-    set_target_properties(msvcp${D_SUFFIX} PROPERTIES ARCHIVE_OUTPUT_NAME "msvcp140_base${D_SUFFIX}${VCLIBS_SUFFIX}")
-    set_target_properties(msvcp${D_SUFFIX} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")
-    set_target_properties(msvcp${D_SUFFIX} PROPERTIES OUTPUT_NAME "msvcp140${D_SUFFIX}${VCLIBS_SUFFIX}")
-    target_link_options(msvcp${D_SUFFIX} PRIVATE "${THIS_CONFIG_LINK_OPTIONS};/delayload:concrt140${D_SUFFIX}.dll")
+add_library(msvcp SHARED)
+target_link_libraries(msvcp PRIVATE msvcp_eha_objects msvcp_objects "${TOOLSET_LIB}/vcruntime$<$<CONFIG:Debug>:d>.lib" "${TOOLSET_LIB}/msvcrt$<$<CONFIG:Debug>:d>.lib" "ucrt$<$<CONFIG:Debug>:d>.lib" "${TOOLSET_LIB}/concrt$<$<CONFIG:Debug>:d>.lib" "delayimp.lib")
+set_target_properties(msvcp PROPERTIES ARCHIVE_OUTPUT_NAME "msvcp140_base$<$<CONFIG:Debug>:d>${VCLIBS_SUFFIX}")
+set_target_properties(msvcp PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")
+set_target_properties(msvcp PROPERTIES OUTPUT_NAME "msvcp140$<$<CONFIG:Debug>:d>${VCLIBS_SUFFIX}")
+target_link_options(msvcp PRIVATE "${THIS_CONFIG_LINK_OPTIONS};/delayload:concrt140$<$<CONFIG:Debug>:d>.dll")
 
-    # import library 'statics'
-    add_library(msvcp${D_SUFFIX}_implib_objects OBJECT ${IMPLIB_SOURCES})
-    target_compile_definitions(msvcp${D_SUFFIX}_implib_objects PRIVATE "_DLL;${THIS_CONFIG_DEFINITIONS}")
-    target_compile_options(msvcp${D_SUFFIX}_implib_objects PRIVATE "${THIS_CONFIG_COMPILE_OPTIONS};/EHsc") # No /GL!
+# import library 'statics'
+add_library(msvcp_implib_objects OBJECT ${IMPLIB_SOURCES})
+target_compile_definitions(msvcp_implib_objects PRIVATE "_DLL;$<$<CONFIG:Debug>:_DEBUG>.g")
+target_compile_options(msvcp_implib_objects PRIVATE "${THIS_CONFIG_COMPILE_OPTIONS};/EHsc") # No /GL!
 
-    # msvcp140_1.dll (the memory_resource satellite)
-    add_library(msvcp_1${D_SUFFIX}_objects OBJECT ${SOURCES_SATELLITE_1})
-    target_compile_definitions(msvcp_1${D_SUFFIX}_objects PRIVATE "_BUILDING_SATELLITE_1;_DLL;${THIS_CONFIG_DEFINITIONS}")
-    target_compile_options(msvcp_1${D_SUFFIX}_objects PRIVATE "${THIS_CONFIG_COMPILE_OPTIONS};${GL_FLAG};/EHsc")
+# msvcp140_1.dll (the memory_resource satellite)
+add_library(msvcp_1_objects OBJECT ${SOURCES_SATELLITE_1})
+target_compile_definitions(msvcp_1_objects PRIVATE "_BUILDING_SATELLITE_1;_DLL;$<$<CONFIG:Debug>:_DEBUG>.g")
+target_compile_options(msvcp_1_objects PRIVATE "${THIS_CONFIG_COMPILE_OPTIONS};$<$<CONFIG:Release>:/GL>;/EHsc")
 
-    add_library(msvcp_1${D_SUFFIX} SHARED)
-    target_link_libraries(msvcp_1${D_SUFFIX} PRIVATE msvcp_1${D_SUFFIX}_objects "msvcp${D_SUFFIX}" "${TOOLSET_LIB}/vcruntime${D_SUFFIX}.lib" "${TOOLSET_LIB}/msvcrt${D_SUFFIX}.lib" "ucrt${D_SUFFIX}.lib")
-    set_target_properties(msvcp_1${D_SUFFIX} PROPERTIES ARCHIVE_OUTPUT_NAME "msvcp140_1${D_SUFFIX}${VCLIBS_SUFFIX}")
-    set_target_properties(msvcp_1${D_SUFFIX} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")
-    set_target_properties(msvcp_1${D_SUFFIX} PROPERTIES OUTPUT_NAME "msvcp140_1${D_SUFFIX}${VCLIBS_SUFFIX}")
-    target_link_options(msvcp_1${D_SUFFIX} PRIVATE "${THIS_CONFIG_LINK_OPTIONS}")
+add_library(msvcp_1 SHARED)
+target_link_libraries(msvcp_1 PRIVATE msvcp_1_objects msvcp "${TOOLSET_LIB}/vcruntime$<$<CONFIG:Debug>:d>.lib" "${TOOLSET_LIB}/msvcrt$<$<CONFIG:Debug>:d>.lib" "ucrt$<$<CONFIG:Debug>:d>.lib")
+set_target_properties(msvcp_1 PROPERTIES ARCHIVE_OUTPUT_NAME "msvcp140_1$<$<CONFIG:Debug>:d>${VCLIBS_SUFFIX}")
+set_target_properties(msvcp_1 PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")
+set_target_properties(msvcp_1 PROPERTIES OUTPUT_NAME "msvcp140_1$<$<CONFIG:Debug>:d>${VCLIBS_SUFFIX}")
+target_link_options(msvcp_1 PRIVATE "${THIS_CONFIG_LINK_OPTIONS}")
 
-    # msvcp140_2.dll (the special math satellite)
-    add_library(msvcp_2${D_SUFFIX}_objects OBJECT ${SOURCES_SATELLITE_2})
-    target_compile_definitions(msvcp_2${D_SUFFIX}_objects PRIVATE "_BUILDING_SATELLITE_2;_DLL;${THIS_CONFIG_DEFINITIONS}")
-    target_compile_options(msvcp_2${D_SUFFIX}_objects PRIVATE "${THIS_CONFIG_COMPILE_OPTIONS};${GL_FLAG};/EHsc")
-    target_link_libraries(msvcp_2${D_SUFFIX}_objects PRIVATE Boost::headers Boost::disable_autolinking)
+# msvcp140_2.dll (the special math satellite)
+add_library(msvcp_2_objects OBJECT ${SOURCES_SATELLITE_2})
+target_compile_definitions(msvcp_2_objects PRIVATE "_BUILDING_SATELLITE_2;_DLL;$<$<CONFIG:Debug>:_DEBUG>.g")
+target_compile_options(msvcp_2_objects PRIVATE "${THIS_CONFIG_COMPILE_OPTIONS};$<$<CONFIG:Release>:/GL>;/EHsc")
+target_link_libraries(msvcp_2_objects PRIVATE Boost::headers Boost::disable_autolinking)
 
-    add_library(msvcp_2${D_SUFFIX} SHARED)
-    target_link_libraries(msvcp_2${D_SUFFIX} PRIVATE msvcp_2${D_SUFFIX}_objects msvcp${D_SUFFIX}_implib_objects "msvcp${D_SUFFIX}" "${TOOLSET_LIB}/vcruntime${D_SUFFIX}.lib" "${TOOLSET_LIB}/msvcrt${D_SUFFIX}.lib" "ucrt${D_SUFFIX}.lib")
-    set_target_properties(msvcp_2${D_SUFFIX} PROPERTIES ARCHIVE_OUTPUT_NAME "msvcp140_2${D_SUFFIX}${VCLIBS_SUFFIX}")
-    set_target_properties(msvcp_2${D_SUFFIX} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")
-    set_target_properties(msvcp_2${D_SUFFIX} PROPERTIES OUTPUT_NAME "msvcp140_2${D_SUFFIX}${VCLIBS_SUFFIX}")
-    target_link_options(msvcp_2${D_SUFFIX} PRIVATE "${THIS_CONFIG_LINK_OPTIONS}")
+add_library(msvcp_2 SHARED)
+target_link_libraries(msvcp_2 PRIVATE msvcp_2_objects msvcp_implib_objects msvcp "${TOOLSET_LIB}/vcruntime$<$<CONFIG:Debug>:d>.lib" "${TOOLSET_LIB}/msvcrt$<$<CONFIG:Debug>:d>.lib" "ucrt$<$<CONFIG:Debug>:d>.lib")
+set_target_properties(msvcp_2 PROPERTIES ARCHIVE_OUTPUT_NAME "msvcp140_2$<$<CONFIG:Debug>:d>${VCLIBS_SUFFIX}")
+set_target_properties(msvcp_2 PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")
+set_target_properties(msvcp_2 PROPERTIES OUTPUT_NAME "msvcp140_2$<$<CONFIG:Debug>:d>${VCLIBS_SUFFIX}")
+target_link_options(msvcp_2 PRIVATE "${THIS_CONFIG_LINK_OPTIONS}")
 
-    # msvcp140_codecvt_ids.dll
-    add_library(msvcp${D_SUFFIX}_codecvt_ids_objects OBJECT ${SOURCES_SATELLITE_CODECVT_IDS})
-    target_compile_definitions(msvcp${D_SUFFIX}_codecvt_ids_objects PRIVATE "_BUILDING_SATELLITE_CODECVT_IDS;_DLL;${THIS_CONFIG_DEFINITIONS}")
-    target_compile_options(msvcp${D_SUFFIX}_codecvt_ids_objects PRIVATE "${THIS_CONFIG_COMPILE_OPTIONS};${GL_FLAG};/EHsc")
+# msvcp140_codecvt_ids.dll
+add_library(msvcp_codecvt_ids_objects OBJECT ${SOURCES_SATELLITE_CODECVT_IDS})
+target_compile_definitions(msvcp_codecvt_ids_objects PRIVATE "_BUILDING_SATELLITE_CODECVT_IDS;_DLL;$<$<CONFIG:Debug>:_DEBUG>.g")
+target_compile_options(msvcp_codecvt_ids_objects PRIVATE "${THIS_CONFIG_COMPILE_OPTIONS};$<$<CONFIG:Release>:/GL>;/EHsc")
 
-    add_library(msvcp${D_SUFFIX}_codecvt_ids SHARED)
-    target_link_libraries(msvcp${D_SUFFIX}_codecvt_ids PRIVATE msvcp${D_SUFFIX}_codecvt_ids_objects "msvcp${D_SUFFIX}" "${TOOLSET_LIB}/vcruntime${D_SUFFIX}.lib" "${TOOLSET_LIB}/msvcrt${D_SUFFIX}.lib" "ucrt${D_SUFFIX}.lib")
-    set_target_properties(msvcp${D_SUFFIX}_codecvt_ids PROPERTIES ARCHIVE_OUTPUT_NAME "msvcp140_codecvt_ids${D_SUFFIX}${VCLIBS_SUFFIX}")
-    set_target_properties(msvcp${D_SUFFIX}_codecvt_ids PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")
-    set_target_properties(msvcp${D_SUFFIX}_codecvt_ids PROPERTIES OUTPUT_NAME "msvcp140${D_SUFFIX}_codecvt_ids${VCLIBS_SUFFIX}")
-    target_link_options(msvcp${D_SUFFIX}_codecvt_ids PRIVATE "${THIS_CONFIG_LINK_OPTIONS}")
+add_library(msvcp_codecvt_ids SHARED)
+target_link_libraries(msvcp_codecvt_ids PRIVATE msvcp_codecvt_ids_objects msvcp "${TOOLSET_LIB}/vcruntime$<$<CONFIG:Debug>:d>.lib" "${TOOLSET_LIB}/msvcrt$<$<CONFIG:Debug>:d>.lib" "ucrt$<$<CONFIG:Debug>:d>.lib")
+set_target_properties(msvcp_codecvt_ids PROPERTIES ARCHIVE_OUTPUT_NAME "msvcp140_codecvt_ids$<$<CONFIG:Debug>:d>${VCLIBS_SUFFIX}")
+set_target_properties(msvcp_codecvt_ids PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")
+set_target_properties(msvcp_codecvt_ids PROPERTIES OUTPUT_NAME "msvcp140$<$<CONFIG:Debug>:d>_codecvt_ids${VCLIBS_SUFFIX}")
+target_link_options(msvcp_codecvt_ids PRIVATE "${THIS_CONFIG_LINK_OPTIONS}")
 
-    # import library
-    add_library(msvcp${D_SUFFIX}_implib STATIC ${HEADERS})
-    target_link_libraries(msvcp${D_SUFFIX}_implib msvcp${D_SUFFIX}_implib_objects)
-    add_dependencies(msvcp${D_SUFFIX}_implib msvcp${D_SUFFIX} msvcp_1${D_SUFFIX} msvcp_2${D_SUFFIX} msvcp${D_SUFFIX}_codecvt_ids)
-    set_target_properties(msvcp${D_SUFFIX}_implib PROPERTIES STATIC_LIBRARY_OPTIONS "/NOLOGO;/NODEFAULTLIB;/IGNORE:4006;$<TARGET_LINKER_FILE:msvcp${D_SUFFIX}>;$<TARGET_LINKER_FILE:msvcp_1${D_SUFFIX}>;$<TARGET_LINKER_FILE:msvcp_2${D_SUFFIX}>;$<TARGET_LINKER_FILE:msvcp${D_SUFFIX}_codecvt_ids>")
-    set_target_properties(msvcp${D_SUFFIX}_implib PROPERTIES ARCHIVE_OUTPUT_NAME "msvcprt${D_SUFFIX}")
-endfunction()
+# import library
+add_library(msvcp_implib STATIC ${HEADERS})
+target_link_libraries(msvcp_implib msvcp_implib_objects)
+add_dependencies(msvcp_implib msvcp msvcp_1 msvcp_2 msvcp_codecvt_ids)
+set_target_properties(msvcp_implib PROPERTIES STATIC_LIBRARY_OPTIONS "/NOLOGO;/NODEFAULTLIB;/IGNORE:4006;$<TARGET_LINKER_FILE:msvcp>;$<TARGET_LINKER_FILE:msvcp_1>;$<TARGET_LINKER_FILE:msvcp_2>;$<TARGET_LINKER_FILE:msvcp_codecvt_ids>")
+set_target_properties(msvcp_implib PROPERTIES ARCHIVE_OUTPUT_NAME "msvcprt$<$<CONFIG:Debug>:d>")
 
-add_stl_dlls("" "" "${VCLIBS_RELEASE_OPTIONS}" "/GL" "/LTCG;/opt:ref,icf")
-add_stl_dlls("d" "_DEBUG" "${VCLIBS_DEBUG_OPTIONS}" "" "/opt:ref,noicf")
+#add_stl_dlls("${VCLIBS_RELEASE_OPTIONS}" "/GL" "/LTCG;/opt:ref,icf")
+add_stl_dlls("${VCLIBS_DEBUG_OPTIONS}" "" "/opt:ref,noicf")
 
 function(add_stl_statics FLAVOR_SUFFIX THIS_CONFIG_DEFINITIONS THIS_CONFIG_COMPILE_OPTIONS)
     add_library(libcpmt${FLAVOR_SUFFIX}_eha OBJECT ${EHA_SOURCES})
