Playing more with multi-config ninja

--- a/stl/CMakeLists.txt
+++ b/stl/CMakeLists.txt
@@ -405,62 +405,70 @@ include_directories(BEFORE
     "${TOOLSET_ROOT_DIR}/crt/src/vcruntime"
     )
 
+set(COMPILE_OPTIONS_GENERATOR $<IF:$<CONFIG:Debug>,/Od,/O2;/Os>)
+set(DEF_GENERATOR $<$<CONFIG:Debug>:_DEBUG>)
+set(DEFAULT_ITERATOR_LEVEL_GENERATOR $<IF:$<CONFIG:Release>,_ITERATOR_DEBUG_LEVEL=0,_ITERATOR_DEBUG_LEVEL=2>)
+set(EXCLUDE_FROM_ALL_GENERATOR $<$<CONFIG:Release>:EXCLUDE_FROM_ALL
+set(GL_GENERATOR $<$<CONFIG:Release>:/GL>)
+set(LINK_OPTIONS_GENERATOR $<IF:$<CONFIG:Debug>,/opt:ref,noicf,/LTCG;/opt:ref,icf>)
+set(SUFFIX_GENERATOR $<$<CONFIG:Debug>:d>)
+
 # msvcp140.dll
 add_library(msvcp_objects OBJECT ${DLL_SOURCES} ${SOURCES})
-target_compile_definitions(msvcp_objects PRIVATE "CRTDLL2;_DLL;$<$<CONFIG:Debug>:_DEBUG>.g")
-target_compile_options(msvcp_objects PRIVATE "${THIS_CONFIG_COMPILE_OPTIONS};$<$<CONFIG:Release>:/GL>;/EHsc")
+target_compile_definitions(msvcp_objects PRIVATE "CRTDLL2;_DLL;${DEF_GENERATOR}.g")
+target_compile_options(msvcp_objects PRIVATE "${COMPILE_OPTIONS_GENERATOR};${GL_GENERATOR};/EHsc")
 
 add_library(msvcp_eha_objects OBJECT ${EHA_SOURCES})
-target_compile_definitions(msvcp_eha_objects PRIVATE "CRTDLL2;_DLL;$<$<CONFIG:Debug>:_DEBUG>.g")
-target_compile_options(msvcp_eha_objects PRIVATE "${THIS_CONFIG_COMPILE_OPTIONS};$<$<CONFIG:Release>:/GL>;/EHa")
+target_compile_definitions(msvcp_eha_objects PRIVATE "CRTDLL2;_DLL;${DEF_GENERATOR}.g")
+target_compile_options(msvcp_eha_objects PRIVATE "${COMPILE_OPTIONS_GENERATOR};${GL_GENERATOR};/EHa")
 
 add_library(msvcp SHARED)
-target_link_libraries(msvcp PRIVATE msvcp_eha_objects msvcp_objects "${TOOLSET_LIB}/vcruntime$<$<CONFIG:Debug>:d>.lib" "${TOOLSET_LIB}/msvcrt$<$<CONFIG:Debug>:d>.lib" "ucrt$<$<CONFIG:Debug>:d>.lib" "${TOOLSET_LIB}/concrt$<$<CONFIG:Debug>:d>.lib" "delayimp.lib")
-set_target_properties(msvcp PROPERTIES ARCHIVE_OUTPUT_NAME "msvcp140_base$<$<CONFIG:Debug>:d>${VCLIBS_SUFFIX}")
+target_link_libraries(msvcp PRIVATE msvcp_eha_objects msvcp_objects "${TOOLSET_LIB}/vcruntime${SUFFIX_GENERATOR}.lib" "${TOOLSET_LIB}/msvcrt${SUFFIX_GENERATOR}.lib" "ucrt${SUFFIX_GENERATOR}.lib" "${TOOLSET_LIB}/concrt${SUFFIX_GENERATOR}.lib" "delayimp.lib")
+set_target_properties(msvcp PROPERTIES ARCHIVE_OUTPUT_NAME "msvcp140_base${SUFFIX_GENERATOR}${VCLIBS_SUFFIX}")
 set_target_properties(msvcp PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")
-set_target_properties(msvcp PROPERTIES OUTPUT_NAME "msvcp140$<$<CONFIG:Debug>:d>${VCLIBS_SUFFIX}")
-target_link_options(msvcp PRIVATE "${THIS_CONFIG_LINK_OPTIONS};/delayload:concrt140$<$<CONFIG:Debug>:d>.dll")
+set_target_properties(msvcp PROPERTIES OUTPUT_NAME "msvcp140${SUFFIX_GENERATOR}${VCLIBS_SUFFIX}")
+target_link_options(msvcp PRIVATE "${THIS_CONFIG_LINK_OPTIONS};/delayload:concrt140${SUFFIX_GENERATOR}.dll")
 
 # import library 'statics'
 add_library(msvcp_implib_objects OBJECT ${IMPLIB_SOURCES})
-target_compile_definitions(msvcp_implib_objects PRIVATE "_DLL;$<$<CONFIG:Debug>:_DEBUG>.g")
-target_compile_options(msvcp_implib_objects PRIVATE "${THIS_CONFIG_COMPILE_OPTIONS};/EHsc") # No /GL!
+target_compile_definitions(msvcp_implib_objects PRIVATE "_DLL;${DEF_GENERATOR}.g")
+target_compile_options(msvcp_implib_objects PRIVATE "${COMPILE_OPTIONS_GENERATOR};/EHsc") # No /GL!
 
 # msvcp140_1.dll (the memory_resource satellite)
 add_library(msvcp_1_objects OBJECT ${SOURCES_SATELLITE_1})
-target_compile_definitions(msvcp_1_objects PRIVATE "_BUILDING_SATELLITE_1;_DLL;$<$<CONFIG:Debug>:_DEBUG>.g")
-target_compile_options(msvcp_1_objects PRIVATE "${THIS_CONFIG_COMPILE_OPTIONS};$<$<CONFIG:Release>:/GL>;/EHsc")
+target_compile_definitions(msvcp_1_objects PRIVATE "_BUILDING_SATELLITE_1;_DLL;${DEF_GENERATOR}.g")
+target_compile_options(msvcp_1_objects PRIVATE "${COMPILE_OPTIONS_GENERATOR};${GL_GENERATOR};/EHsc")
 
 add_library(msvcp_1 SHARED)
-target_link_libraries(msvcp_1 PRIVATE msvcp_1_objects msvcp "${TOOLSET_LIB}/vcruntime$<$<CONFIG:Debug>:d>.lib" "${TOOLSET_LIB}/msvcrt$<$<CONFIG:Debug>:d>.lib" "ucrt$<$<CONFIG:Debug>:d>.lib")
-set_target_properties(msvcp_1 PROPERTIES ARCHIVE_OUTPUT_NAME "msvcp140_1$<$<CONFIG:Debug>:d>${VCLIBS_SUFFIX}")
+target_link_libraries(msvcp_1 PRIVATE msvcp_1_objects msvcp "${TOOLSET_LIB}/vcruntime${SUFFIX_GENERATOR}.lib" "${TOOLSET_LIB}/msvcrt${SUFFIX_GENERATOR}.lib" "ucrt${SUFFIX_GENERATOR}.lib")
+set_target_properties(msvcp_1 PROPERTIES ARCHIVE_OUTPUT_NAME "msvcp140_1${SUFFIX_GENERATOR}${VCLIBS_SUFFIX}")
 set_target_properties(msvcp_1 PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")
-set_target_properties(msvcp_1 PROPERTIES OUTPUT_NAME "msvcp140_1$<$<CONFIG:Debug>:d>${VCLIBS_SUFFIX}")
+set_target_properties(msvcp_1 PROPERTIES OUTPUT_NAME "msvcp140_1${SUFFIX_GENERATOR}${VCLIBS_SUFFIX}")
 target_link_options(msvcp_1 PRIVATE "${THIS_CONFIG_LINK_OPTIONS}")
 
 # msvcp140_2.dll (the special math satellite)
 add_library(msvcp_2_objects OBJECT ${SOURCES_SATELLITE_2})
-target_compile_definitions(msvcp_2_objects PRIVATE "_BUILDING_SATELLITE_2;_DLL;$<$<CONFIG:Debug>:_DEBUG>.g")
-target_compile_options(msvcp_2_objects PRIVATE "${THIS_CONFIG_COMPILE_OPTIONS};$<$<CONFIG:Release>:/GL>;/EHsc")
+target_compile_definitions(msvcp_2_objects PRIVATE "_BUILDING_SATELLITE_2;_DLL;${DEF_GENERATOR}.g")
+target_compile_options(msvcp_2_objects PRIVATE "${COMPILE_OPTIONS_GENERATOR};${GL_GENERATOR};/EHsc")
 target_link_libraries(msvcp_2_objects PRIVATE Boost::headers Boost::disable_autolinking)
 
 add_library(msvcp_2 SHARED)
-target_link_libraries(msvcp_2 PRIVATE msvcp_2_objects msvcp_implib_objects msvcp "${TOOLSET_LIB}/vcruntime$<$<CONFIG:Debug>:d>.lib" "${TOOLSET_LIB}/msvcrt$<$<CONFIG:Debug>:d>.lib" "ucrt$<$<CONFIG:Debug>:d>.lib")
-set_target_properties(msvcp_2 PROPERTIES ARCHIVE_OUTPUT_NAME "msvcp140_2$<$<CONFIG:Debug>:d>${VCLIBS_SUFFIX}")
+target_link_libraries(msvcp_2 PRIVATE msvcp_2_objects msvcp_implib_objects msvcp "${TOOLSET_LIB}/vcruntime${SUFFIX_GENERATOR}.lib" "${TOOLSET_LIB}/msvcrt${SUFFIX_GENERATOR}.lib" "ucrt${SUFFIX_GENERATOR}.lib")
+set_target_properties(msvcp_2 PROPERTIES ARCHIVE_OUTPUT_NAME "msvcp140_2${SUFFIX_GENERATOR}${VCLIBS_SUFFIX}")
 set_target_properties(msvcp_2 PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")
-set_target_properties(msvcp_2 PROPERTIES OUTPUT_NAME "msvcp140_2$<$<CONFIG:Debug>:d>${VCLIBS_SUFFIX}")
+set_target_properties(msvcp_2 PROPERTIES OUTPUT_NAME "msvcp140_2${SUFFIX_GENERATOR}${VCLIBS_SUFFIX}")
 target_link_options(msvcp_2 PRIVATE "${THIS_CONFIG_LINK_OPTIONS}")
 
 # msvcp140_codecvt_ids.dll
 add_library(msvcp_codecvt_ids_objects OBJECT ${SOURCES_SATELLITE_CODECVT_IDS})
-target_compile_definitions(msvcp_codecvt_ids_objects PRIVATE "_BUILDING_SATELLITE_CODECVT_IDS;_DLL;$<$<CONFIG:Debug>:_DEBUG>.g")
-target_compile_options(msvcp_codecvt_ids_objects PRIVATE "${THIS_CONFIG_COMPILE_OPTIONS};$<$<CONFIG:Release>:/GL>;/EHsc")
+target_compile_definitions(msvcp_codecvt_ids_objects PRIVATE "_BUILDING_SATELLITE_CODECVT_IDS;_DLL;${DEF_GENERATOR}.g")
+target_compile_options(msvcp_codecvt_ids_objects PRIVATE "${COMPILE_OPTIONS_GENERATOR};${GL_GENERATOR};/EHsc")
 
 add_library(msvcp_codecvt_ids SHARED)
-target_link_libraries(msvcp_codecvt_ids PRIVATE msvcp_codecvt_ids_objects msvcp "${TOOLSET_LIB}/vcruntime$<$<CONFIG:Debug>:d>.lib" "${TOOLSET_LIB}/msvcrt$<$<CONFIG:Debug>:d>.lib" "ucrt$<$<CONFIG:Debug>:d>.lib")
-set_target_properties(msvcp_codecvt_ids PROPERTIES ARCHIVE_OUTPUT_NAME "msvcp140_codecvt_ids$<$<CONFIG:Debug>:d>${VCLIBS_SUFFIX}")
+target_link_libraries(msvcp_codecvt_ids PRIVATE msvcp_codecvt_ids_objects msvcp "${TOOLSET_LIB}/vcruntime${SUFFIX_GENERATOR}.lib" "${TOOLSET_LIB}/msvcrt${SUFFIX_GENERATOR}.lib" "ucrt${SUFFIX_GENERATOR}.lib")
+set_target_properties(msvcp_codecvt_ids PROPERTIES ARCHIVE_OUTPUT_NAME "msvcp140_codecvt_ids${SUFFIX_GENERATOR}${VCLIBS_SUFFIX}")
 set_target_properties(msvcp_codecvt_ids PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")
-set_target_properties(msvcp_codecvt_ids PROPERTIES OUTPUT_NAME "msvcp140$<$<CONFIG:Debug>:d>_codecvt_ids${VCLIBS_SUFFIX}")
+set_target_properties(msvcp_codecvt_ids PROPERTIES OUTPUT_NAME "msvcp140${SUFFIX_GENERATOR}_codecvt_ids${VCLIBS_SUFFIX}")
 target_link_options(msvcp_codecvt_ids PRIVATE "${THIS_CONFIG_LINK_OPTIONS}")
 
 # import library
@@ -468,24 +476,70 @@ add_library(msvcp_implib STATIC ${HEADERS})
 target_link_libraries(msvcp_implib msvcp_implib_objects)
 add_dependencies(msvcp_implib msvcp msvcp_1 msvcp_2 msvcp_codecvt_ids)
 set_target_properties(msvcp_implib PROPERTIES STATIC_LIBRARY_OPTIONS "/NOLOGO;/NODEFAULTLIB;/IGNORE:4006;$<TARGET_LINKER_FILE:msvcp>;$<TARGET_LINKER_FILE:msvcp_1>;$<TARGET_LINKER_FILE:msvcp_2>;$<TARGET_LINKER_FILE:msvcp_codecvt_ids>")
-set_target_properties(msvcp_implib PROPERTIES ARCHIVE_OUTPUT_NAME "msvcprt$<$<CONFIG:Debug>:d>")
+set_target_properties(msvcp_implib PROPERTIES ARCHIVE_OUTPUT_NAME "msvcprt${SUFFIX_GENERATOR}")
 
-#add_stl_dlls("${VCLIBS_RELEASE_OPTIONS}" "/GL" "/LTCG;/opt:ref,icf")
-add_stl_dlls("${VCLIBS_DEBUG_OPTIONS}" "" "/opt:ref,noicf")
-
-function(add_stl_statics FLAVOR_SUFFIX THIS_CONFIG_DEFINITIONS THIS_CONFIG_COMPILE_OPTIONS)
+function(add_stl_statics FLAVOR_SUFFIX THIS_CONFIG_DEFINITIONS)
     add_library(libcpmt${FLAVOR_SUFFIX}_eha OBJECT ${EHA_SOURCES})
-    target_compile_definitions(libcpmt${FLAVOR_SUFFIX}_eha PRIVATE "${THIS_CONFIG_DEFINITIONS}")
-    target_compile_options(libcpmt${FLAVOR_SUFFIX}_eha PRIVATE "${THIS_CONFIG_COMPILE_OPTIONS};/EHa")
+    target_compile_definitions(libcpmt${FLAVOR_SUFFIX}_eha PRIVATE "${DEF_GENERATOR};${THIS_CONFIG_DEFINITIONS}")
+    target_compile_options(libcpmt${FLAVOR_SUFFIX}_eha PRIVATE "${COMPILE_OPTIONS_GENERATOR};/EHa")
+    set_target_properties(libcpmt${FLAVOR_SUFFIX}_eha PROPERTIES OUTPUT_NAME "libcmpt${SUFFIX_GENERATOR}_eha")
 
     add_library(libcpmt${FLAVOR_SUFFIX} STATIC ${HEADERS} ${IMPLIB_SOURCES} ${SOURCES} ${STATIC_SOURCES})
-    target_compile_definitions(libcpmt${FLAVOR_SUFFIX} PRIVATE "${THIS_CONFIG_DEFINITIONS}")
-    target_compile_options(libcpmt${FLAVOR_SUFFIX} PRIVATE "${THIS_CONFIG_COMPILE_OPTIONS};/EHsc")
+    target_compile_definitions(libcpmt${FLAVOR_SUFFIX} PRIVATE "${DEF_GENERATOR};${THIS_CONFIG_DEFINITIONS}")
+    target_compile_options(libcpmt${FLAVOR_SUFFIX} PRIVATE "${COMPILE_OPTIONS_GENERATOR};/EHsc")
     target_link_libraries(libcpmt${FLAVOR_SUFFIX} PRIVATE Boost::headers Boost::disable_autolinking libcpmt${FLAVOR_SUFFIX}_eha)
+    set_target_properties(libcpmt${FLAVOR_SUFFIX} PROPERTIES OUTPUT_NAME "libcmpt${SUFFIX_GENERATOR}")
 endfunction()
 
-add_stl_statics("" "_ITERATOR_DEBUG_LEVEL=0" "${VCLIBS_RELEASE_OPTIONS}")
-add_stl_statics("1" "_ITERATOR_DEBUG_LEVEL=1" "${VCLIBS_RELEASE_OPTIONS}")
-add_stl_statics("d" "_DEBUG;_ITERATOR_DEBUG_LEVEL=2" "${VCLIBS_DEBUG_OPTIONS}")
-add_stl_statics("d1" "_DEBUG;_ITERATOR_DEBUG_LEVEL=1" "${VCLIBS_DEBUG_OPTIONS}")
-add_stl_statics("d0" "_DEBUG;_ITERATOR_DEBUG_LEVEL=0" "${VCLIBS_DEBUG_OPTIONS}")
+get_property(GENERATOR_IS_MULTI_CONFIG GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)
+
+if(GENERATOR_IS_MULTI_CONFIG)
+    list(FIND ${CMAKE_CONFIGURATION_TYPES} "Release" HAS_RELEASE)
+    list(FIND ${CMAKE_CONFIGURATION_TYPES} "Debug" HAS_DEBUG)
+elseif()
+    string(COMPARE EQUAL ${CMAKE_BUILD_TYPE} "Release" HAS_RELEASE)
+    string(COMPARE EQUAL ${CMAKE_BUILD_TYPE} "Release" HAS_DEBUG)
+endif()
+
+if(HAS_RELEASE)
+    add_stl_statics("" "_ITERATOR_DEBUG_LEVEL=0")
+    add_stl_statics("1" "_ITERATOR_DEBUG_LEVEL=1")
+endif()
+
+if(HAS_DEBUG)
+    add_stl_statics("d" "_ITERATOR_DEBUG_LEVEL=2")
+    add_stl_statics("d1" "_ITERATOR_DEBUG_LEVEL=1")
+    add_stl_statics("d0" "_ITERATOR_DEBUG_LEVEL=0")
+endif()
+
+add_library(libcpmt_eha OBJECT ${EHA_SOURCES})
+target_compile_definitions(libcpmt_eha PRIVATE "${DEF_GENERATOR};${DEFAULT_ITERATOR_LEVEL_GENERATOR}")
+target_compile_options(libcpmt_eha PRIVATE "${COMPILE_OPTIONS_GENERATOR};/EHa")
+set_target_properties(libcpmt_eha PROPERTIES OUTPUT_NAME "libcmpt${SUFFIX_GENERATOR}_eha")
+
+add_library(libcpmt STATIC ${HEADERS} ${IMPLIB_SOURCES} ${SOURCES} ${STATIC_SOURCES})
+target_compile_definitions(libcpmt PRIVATE "${DEF_GENERATOR};${DEFAULT_ITERATOR_LEVEL_GENERATOR}")
+target_compile_options(libcpmt PRIVATE "${COMPILE_OPTIONS_GENERATOR};/EHsc")
+target_link_libraries(libcpmt PRIVATE Boost::headers Boost::disable_autolinking libcpmt_eha)
+set_target_properties(libcpmt PROPERTIES OUTPUT_NAME "libcmpt${SUFFIX_GENERATOR}")
+
+add_library(libcpmt1_eha OBJECT ${EHA_SOURCES})
+target_compile_definitions(libcpmt1_eha PRIVATE "${DEF_GENERATOR};_ITERATOR_DEBUG_LEVEL=1")
+target_compile_options(libcpmt1_eha PRIVATE "${COMPILE_OPTIONS_GENERATOR};/EHa")
+set_target_properties(libcpmt1_eha PROPERTIES OUTPUT_NAME "libcmpt${SUFFIX_GENERATOR}1_eha")
+
+add_library(libcpmt1 STATIC ${HEADERS} ${IMPLIB_SOURCES} ${SOURCES} ${STATIC_SOURCES})
+target_compile_definitions(libcpmt1 PRIVATE "${DEF_GENERATOR};_ITERATOR_DEBUG_LEVEL=1")
+target_compile_options(libcpmt1 PRIVATE "${COMPILE_OPTIONS_GENERATOR};/EHsc")
+target_link_libraries(libcpmt1 PRIVATE Boost::headers Boost::disable_autolinking libcpmt1_eha)
+set_target_properties(libcpmt1 PROPERTIES OUTPUT_NAME "libcmpt${SUFFIX_GENERATOR}1")
+
+if(HAS_DEBUG)
+add_library(libcpmt0_eha OBJECT ${EHA_SOURCES})
+target_compile_definitions(libcpmtd0_eha PRIVATE "${DEF_GENERATOR};_ITERATOR_DEBUG_LEVEL=0")
+target_compile_options(libcpmtd0_eha PRIVATE "${COMPILE_OPTIONS_GENERATOR};/EHa")
+
+add_library(libcpmt0 STATIC ${HEADERS} ${IMPLIB_SOURCES} ${SOURCES} ${STATIC_SOURCES})
+target_compile_definitions(libcpmt0 PRIVATE "${DEF_GENERATOR};_ITERATOR_DEBUG_LEVEL=0")
+    target_compile_options(libcpmt0 PRIVATE "${COMPILE_OPTIONS_GENERATOR};/EHsc")
+target_link_libraries(libcpmt0 PRIVATE Boost::headers Boost::disable_autolinking libcpmtd0_eha)
