Build correctly and runs the tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,12 +19,16 @@ if(NOT DEFINED VCLIBS_TARGET_ARCHITECTURE)
     set(VCLIBS_TARGET_ARCHITECTURE "${CMAKE_CXX_COMPILER_ARCHITECTURE_ID}")
 endif()
 
+set(CMAKE_CONFIGURATION_TYPES Debug;Release)
+set(CMAKE_CROSS_CONFIGS Debug;Release)
+set(CMAKE_DEFAULT_BUILD_TYPE Release)
+set(CMAKE_DEFAULT_CONFIGS all)
+
 set(CMAKE_CXX_FLAGS "")
 set(CMAKE_CXX_FLAGS_DEBUG "")
 set(CMAKE_CXX_FLAGS_RELEASE "")
 set(CMAKE_CXX_STANDARD_LIBRARIES "kernel32.lib")
 set(CMAKE_CXX_STANDARD_LIBRARIES_INIT "kernel32.lib")
-set(CMAKE_DEFAULT_CONFIGS "Release;Debug")
 set(CMAKE_MSVC_RUNTIME_LIBRARY "")
 
 if("${VCLIBS_TARGET_ARCHITECTURE}" MATCHES "^[xX]86$")
