--- a/tests/std/lit.site.cfg.in
+++ b/tests/std/lit.site.cfg.in
@@ -1,10 +1,10 @@
 # Copyright (c) Microsoft Corporation.
 # SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
 
-config.cxx_archive_root            = "@CMAKE_ARCHIVE_OUTPUT_DIRECTORY@"
+config.cxx_archive_root            = "$<TARGET_FILE_DIR:msvcp_implib>"
 config.cxx_headers                 = "@STL_TESTED_HEADERS_DIR@"
-config.cxx_library_root            = "@CMAKE_LIBRARY_OUTPUT_DIRECTORY@"
-config.cxx_runtime_root            = "@CMAKE_RUNTIME_OUTPUT_DIRECTORY@"
+config.cxx_library_root            = "$<TARGET_FILE_DIR:msvcp_implib>"
+config.cxx_runtime_root            = "$<TARGET_FILE_DIR:msvcp>"
 config.expected_results_list_path  = "@STD_EXPECTED_RESULTS@"
 config.include_dirs                = ["@LIBCXX_SOURCE_DIR@/test/support", "@STL_SOURCE_DIR@/tests/std/include"]
 config.msvc_toolset_libs_root      = "@TOOLSET_LIB@"
@@ -14,5 +14,6 @@ config.target_arch                 = "@VCLIBS_TARGET_ARCHITECTURE@"
 config.test_exec_root              = "@STD_TEST_OUTPUT_DIR@"
 config.test_subdirs_file           = "@STD_TEST_SUBDIRS_FILE@"
 config.test_subdirs_root           = "@STD_TEST_SUBDIRS_ROOT@"
+config.available_features.add("$<LOWER_CASE:$<CONFIG>>")
 
 lit_config.load_config(config, "@CMAKE_CURRENT_SOURCE_DIR@/lit.cfg")
