--- a/tests/std/lit.site.cfg.in
+++ b/tests/std/lit.site.cfg.in
@@ -8,6 +8,7 @@ config.cxx_runtime_root            = "@CMAKE_RUNTIME_OUTPUT_DIRECTORY@"
 config.expected_results_list_path  = "@STD_EXPECTED_RESULTS@"
 config.include_dirs                = ["@LIBCXX_SOURCE_DIR@/test/support", "@STL_SOURCE_DIR@/tests/std/include"]
 config.msvc_toolset_libs_root      = "@TOOLSET_LIB@"
+config.step_provider               = "STLDelayedExecutionStepProvider"
 config.stl_build_root              = "@STL_BUILD_ROOT@"
 config.stl_src_root                = "@STL_SOURCE_DIR@"
 config.target_arch                 = "@VCLIBS_TARGET_ARCHITECTURE@"
