--- a/tests/tr1/lit.site.cfg.in
+++ b/tests/tr1/lit.site.cfg.in
@@ -15,4 +15,4 @@ config.test_exec_root           = "@TR1_TEST_OUTPUT_DIR@"
 config.test_subdirs_file        = "@TR1_TEST_SUBDIRS_FILE@"
 config.test_subdirs_root        = "@TR1_TEST_SUBDIRS_ROOT@"
 
-lit_config.load_config(config, "@CMAKE_CURRENT_SOURCE_DIR@/lit.cfg")
+lit_config.load_config(config, "@STL_SOURCE_DIR@/tests/tr1/lit.cfg")
